<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".dashboard.dashboardscreen.DashboardScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            >

            <com.github.florent37.arclayout.ArcLayout
                android:id="@+id/arcLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:arc_cropDirection="cropOutside"
                app:arc_height="30dp"
                app:elevation="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_login_view">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_marginBottom="@dimen/_20sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_2sdp"
                            android:text="Welcome to \nAC Zone"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16ssp"
                            android:textStyle="bold" />
                    </LinearLayout>


                </RelativeLayout>


            </com.github.florent37.arclayout.ArcLayout>
        </RelativeLayout>


            <LinearLayout
                android:id="@+id/layout_dashboard"
                android:layout_marginTop="@dimen/_120sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/dash_add_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardElevation="@dimen/_4sdp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:contentPadding="@dimen/_15sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cerclebackgroundgreen"
                                android:padding="@dimen/_10sdp"
                                android:src="@drawable/ic_plus_solid"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/add_order"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/dash_my_order"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardElevation="@dimen/_4sdp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:contentPadding="@dimen/_15sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cerclebackgroundgreen"
                                android:padding="@dimen/_10sdp"
                                android:src="@drawable/ic_shopping_bag_solid"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/my_order"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:id="@+id/dash_check_stock"
                        app:cardElevation="@dimen/_4sdp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:contentPadding="@dimen/_15sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cerclebackgroundyello"
                                android:padding="@dimen/_10sdp"
                                android:src="@drawable/ic_search_solid"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/check_stock"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/dash_announcement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        app:cardElevation="@dimen/_4sdp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:contentPadding="@dimen/_15sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cerclebackgroundpurple"
                                android:padding="@dimen/_10sdp"
                                android:src="@drawable/ic_bullhorn_solid"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="@dimen/_12sdp"
                                android:text="@string/anouncement"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clipToPadding="false"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.v7.widget.CardView
                        android:id="@+id/dash_services"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:clickable="true"
                        app:cardElevation="@dimen/_4sdp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:contentPadding="@dimen/_15sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cerclebackgroundblackblue"
                                android:padding="@dimen/_10sdp"
                                android:src="@drawable/ic_cogs_solid"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:textSize="@dimen/_12sdp"
                                android:text="@string/services"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/dash_download"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        app:cardElevation="@dimen/_4sdp"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:contentPadding="@dimen/_15sdp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/cerclebackgroundpink"
                                android:padding="@dimen/_10sdp"
                                android:src="@drawable/ic_download_solid"
                                android:tint="@color/white" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:text="@string/downloads"
                                android:textSize="@dimen/_12sdp"
                                android:textStyle="bold" />


                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </LinearLayout>


            </LinearLayout>

            <ImageView
                android:id="@+id/logout"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:tint="@color/white"
                android:layout_margin="@dimen/_16sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_sign_out_alt_solid" />


        </RelativeLayout>
    </LinearLayout>

</ScrollView>