<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        android:gravity="center"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_16sdp"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:layout_marginTop="10dp"
            android:text="@string/signup_now"
            android:textColor="@color/black"
            android:textSize="@dimen/_32ssp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/signupView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="2dp"
            app:cardElevation="3dp"
            app:contentPadding="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_10sdp"/>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_input_txt_name"
                    android:layout_width="match_parent"
                    android:minHeight="@dimen/_40sdp"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Full Name"
                        android:focusable="true"
                        android:textSize="@dimen/_12ssp"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_input_txt_mobile"
                    android:layout_width="match_parent"
                    android:minHeight="@dimen/_40sdp"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Mobile Number"
                        android:textSize="@dimen/_12ssp"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:visibility="gone"
                    android:id="@+id/sign_input_txt_email"
                    android:layout_width="match_parent"
                    android:minHeight="@dimen/_40sdp"
                    android:layout_marginTop="4dp"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:textSize="@dimen/_12ssp"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_input_txt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:minHeight="@dimen/_40sdp"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:textSize="@dimen/_12ssp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/sign_input_txt_con_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:minHeight="@dimen/_40sdp"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Confirm Password"
                        android:textSize="@dimen/_12ssp"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_input_btn_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/gradient_round_btn_view"
                    android:text="@string/signup"
                    android:textSize="@dimen/_12ssp"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center"
                    android:textSize="@dimen/_12ssp"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/terms" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already a member ? "
                android:textSize="@dimen/_12ssp"/>

            <TextView
                android:id="@+id/sign_txt_login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" Login Now"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>